added header skeleton to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,17 @@
   
       <nav class="nav">
           <span class="span">tweeter</span>
-            <a href="#" class="compose"><b>Write </b>  a new Tweet</a>
+          <a href="#" class="compose"><b>Write </b>  a new Tweet</a>
       </nav>
-
+      <header>
+        <div>
+          <img src="/images/profile-hex.png">
+        </div>
+        <br>
+        <div>
+          <h2>Your Name</h2>
+        </div>
+      </header>
 
 
 
