--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,7 +32,7 @@
           <span class="span">tweeter</span>
           <a href="#" class="compose"><b>Write </b>  a new Tweet</a>
       </nav>
-      <header>
+      <header class="header">
         <div>
           <img src="/images/profile-hex.png">
         </div>
