added 2 arrow icon

--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,24 @@
     <!-- Top nav bar (fixed) -->
   
       <nav class="nav">
-          <span class="span">tweeter</span>
-          <a href="#" class="compose"><b>Write </b>  a new Tweet</a>
+        <div class="tweeter">
+          <span>tweeter</span>
+        </div>
+        <div class="composeTweet">
+          <a href="#"><b>Write </b>  a new Tweet</a>
+          <div>
+            <img class="arrowIcon" src="/images/icon2arrows.svg">
+          </div>
+        </div>
       </nav>
+
+
       <header class="header">
         <div>
           <img src="/images/profile-hex.png">
         </div>
         <br>
-        <div>
+        <div class="Your-Name">
           <h2>Your Name</h2>
         </div>
       </header>
