--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,14 @@
     <!-- Page-specific (main) content here -->
     <main class="zombieContainer">
       <h2>Compose Tweet</h2>
-      <form class="form-inline" action="/tweets/" method="POST">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
-        <div>
-          <button type="submit">Tweet</button>
+      <form class="new-tweet" action="/tweets/" method="POST">
+        <div class="tweet-input">
+          <label for="tweet-text"></label>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        </div>
+        <br>
+        <div class="below-tweet-input">
+          <button type="submit" class="tweet-button">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
