--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -65,6 +66,12 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+      <article class="tweet-container">
+        <header>
+          <p>Thiasdnjfuhweiufmasndfisandfjnasd</p>
+        </header>
+        <footer></footer>
+      </article>
     </main>
   </body>
 </html>
