--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,11 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/b19015b78f.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -54,24 +56,49 @@
 
     <!-- Page-specific (main) content here -->
     <main class="zombieContainer">
-      <h2>Compose Tweet</h2>
-      <form class="new-tweet" action="/tweets/" method="POST">
-        <div class="tweet-input">
-          <label for="tweet-text"></label>
-          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
-        </div>
-        <br>
-        <div class="below-tweet-input">
-          <button type="submit" class="tweet-button">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-      <article class="tweet-container">
-        <header>
-          <p>Thiasdnjfuhweiufmasndfisandfjnasd</p>
-        </header>
-        <footer></footer>
-      </article>
+      <section>
+        <h2>Compose Tweet</h2>
+        <form class="new-tweet" action="/tweets/" method="POST">
+          <div class="tweet-input">
+            <label for="tweet-text"></label>
+            <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+          </div>
+          <br>
+          <div class="below-tweet-input">
+            <button type="submit" class="tweet-button">Tweet</button>
+            <output name="counter" id="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+
+      </section>
+      <br>
+      <section class="tweet-container">
+        <article class="article-tweet">
+          <header class="tweet-header">
+            <div>
+              <div class="tweet-userID">
+                <i class="fas fa-air-freshener"></i>
+                <p>User ID name</p>
+                <div class="atUser">
+                <p>@User</p>
+                </div>
+              </div>
+              <div>
+                <%= tweets %>
+              </div>
+            </div>
+          </header>
+          <footer class="tweet-footer">
+            <div>10 days ago</div>
+              <span class="span-tweet">
+                <i class="fas fa-flag"></i>
+                <i class="fas fa-retweet"></i>
+                <i class="fas fa-heart"></i>
+              </span>
+          </footer>
+        </article>
+      </section>
+      <br>
     </main>
   </body>
 </html>
