change source of header down arrows to font awesome image

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <b>Write </b>  a new Tweet
           </div>
           <div class="arrow-container">
-            <img class="arrow-icon" src="/images/icon2arrows.svg">
+            <i class="fas fa-angle-double-down"></i>
           </div>
         </div>
       </nav>
