--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="zombieContainer">
+    <main class="new-tweet-input-container">
       <section>
         <h2>Compose Tweet</h2>
         <form class="new-tweet" action="/tweets/" method="POST">
