refactor code to utilize jquery in client.js

--- a/public/index.html
+++ b/public/index.html
@@ -74,33 +74,7 @@
 
       </section>
       <br>
-      <section class="tweet-container">
-        <article class="tweet">
-          <header class="tweet-header">
-            <div class="user-info">
-              <div class="avatar-name">
-                <div class="avatar">
-                  <i class="fas fa-air-freshener fa-3x"></i>
-                </div>
-                <p>User Name</p>
-              </div>
-              <div class="username">
-                @User
-              </div>
-            </div>
-          </header>
-          <div class="tweet-body">
-            This is the tweet text
-          </div>
-          <footer class="tweet-footer">
-            <div class="footer-left">10 Days ago</div>
-            <div class="footer-right">
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
-            </div>  
-          </footer>
-        </article>
+      <section id="tweet-container">
       </section>
       <br>
     </main>
