--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script src="https://kit.fontawesome.com/b19015b78f.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
@@ -70,6 +71,7 @@
             <button type="submit" class="tweet-button">Tweet</button>
             <output name="counter" id="counter" class="counter" for="tweet-text">140</output>
           </div>
+          <div class="error" id="error">Error Message</div>
         </form>
 
       </section>
