add meta tag in head to disable smartphone zoom

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -60,7 +62,9 @@
     <!-- Page-specific (main) content here -->
     <main class="new-tweet-input-container">
       <section>
-        <h2>Compose Tweet</h2>
+        <div id="error">
+        </div>
+        <h4>What are you humming about?</h4>
         <form class="new-tweet" action="/tweets/" method="POST">
           <div class="tweet-input">
             <label for="tweet-text"></label>
@@ -71,7 +75,6 @@
             <button type="submit" class="tweet-button">Tweet</button>
             <output name="counter" id="counter" class="counter" for="tweet-text">140</output>
           </div>
-          <div class="error" id="error">Error Message</div>
         </form>
 
       </section>
