--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
           <img src="/images/profile-hex.png">
         </div>
         <br>
-        <div class="Your-Name">
-          <h2>Your Name</h2>
+        <div class="your-name">
+          <b>Amy</b> Mansell
         </div>
       </header>
 
