--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,10 @@
         <div id="error">
         </div>
         <form class="new-tweet" action="/tweets/" method="POST">
+          What are you humming about?
           <div class="tweet-input">
             <label for="tweet-text"></label>
-            <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+            <textarea name="text" id="tweet-text"></textarea>
           </div>
           <br>
           <div class="below-tweet-input">
